# Opar

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
checks/: Makefile.am  Makefile.in  test_particle_storage.cpp  test_weighting.cpp
m4/: ax_schnek.m4
src/: CMakeLists.txt  Makefile.am  Makefile.in  common.cpp  common.hpp  config.hpp  config.hpp.in  constants.hpp  currents.cpp  currents.hpp  defs.hpp  field_initialise.cpp  field_initialise.hpp  fieldbc.hpp  fields.cpp  fields.hpp  functions.cpp  functions.hpp  globals.cpp  globals.hpp  numboundary.hpp  opar.cpp  opar.hpp  particle_boundary.cpp  particle_boundary.hpp  particle_diagnostic.cpp  particle_diagnostic.hpp  particle_exchange.cpp  particle_exchange.hpp  particles.cpp  particles.hpp  random.cpp  random.hpp  routing_file  species.cpp  species.hpp  species_initialise.cpp  species_initialise.hpp  types.hpp  util.cpp  (+5 more)
testsuite/: .gitignore
testsuite/1D/cpml_border/: analysis.py  opar.setup
testsuite/1D/plane_wave/: analysis.py  opar.setup
testsuite/2D/cpml_border/: analysis.py  opar.setup
testsuite/2D/plane_wave/: analysis.py  opar.setup
testsuite/3D/cpml_border/: analysis.py  opar.setup
testsuite/3D/plane_wave/: analysis.py  opar.setup
testsuite/basics/: opar.config
testsuite/basics/particle_initialisation/: densityplot.awk
testsuite/basics/twoD/em-pulse/: opar.config
testsuite/basics/twoD/em-wave/: opar.config
testsuite/basics/twoD/particle_initialisation/: opar.config  process_phase_space
testsuite/basics/twoD/single-particle-current/: opar.config
testsuite/basics/twoD/single-particle-motion/: opar.config  process_phase_space
testsuite/reference/: process_wavemodes
testsuite/reference/plasmaoscillation/1d/: opar.config
testsuite/reference/plasmaoscillation/2d_x/: opar.config
testsuite/reference/twostream/: opar.config
testsuite/reference/wavemodes/: opar.config
testsuite/reference/wavemodes2d/: information.tex  opar.config  parsetrace.out  references.bib
testsuite/reference/waveplasma/: opar.config
testsuite_old/basics/twoD/em-pulse/: opar.config
testsuite_old/basics/twoD/particle_initialisation/: opar.config
testsuite_old/basics/twoD/single-particle-motion/: process_phase_space
testsuite_old/reference/plasmaoscillation/1d/: opar.config
testsuite_old/reference/twostream/: process_twostream
testsuite_old/reference/wavemodes/: opar.config  process_wavemodes  wavemodes.m
testsuite_old/reference/wavemodes2d/: debug.txt
