# Makefile.am
#
# Created on: 30 Jul 2012
# Author: Holger Schmitz
# Email: holger@notjustphysics.com
#
# Copyright 2012 Holger Schmitz
#
# This file is part of OPar.
#
# OPar is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# OPar is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with OPar.  If not, see <http://www.gnu.org/licenses/>.

bin_PROGRAMS = opar

opar_SOURCES = \
  common.cpp  \
  common.hpp  \
  config.hpp  \
  fieldbc.hpp \
  fields.hpp  \
  fields.cpp  \
  globals.hpp \
  globals.cpp \
  opar.cpp    \
  opar.hpp    \
  util.hpp    \
  util.cpp

opar_LDADD = -lschnek $(INTI_LIBS)


