# Makefile.am
#
# Created on: 30 Jul 2012
# Author: Holger Schmitz
# Email: holger@notjustphysics.com
#
# Copyright 2012 Holger Schmitz
#
# This file is part of OPar.
#
# OPar is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# OPar is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with OPar.  If not, see <http://www.gnu.org/licenses/>.

bin_PROGRAMS = opar

opar_SOURCES =             \
  common.cpp               \
  common.hpp               \
  config.hpp               \
  constants.hpp            \
  currents.cpp             \
  currents.hpp             \
  defs.hpp                 \
  fieldbc.hpp              \
  fields.hpp               \
  field_initialise.cpp     \
  field_initialise.hpp     \
  fields.cpp               \
  functions.hpp            \
  functions.cpp            \
  globals.hpp              \
  globals.cpp              \
  numboundary.hpp          \
  opar.cpp                 \
  opar.hpp                 \
  particles.cpp            \
  particles.hpp            \
  particle_boundary.cpp    \
  particle_boundary.hpp    \
  particle_exchange.cpp    \
  particle_exchange.hpp    \
  particle_diagnostic.cpp  \
  particle_diagnostic.hpp  \
  random.cpp               \
  random.hpp               \
  species.cpp              \
  species.hpp              \
  species_initialise.cpp   \
  species_initialise.hpp   \
  types.hpp                \
  util.hpp                 \
  util.cpp                 \
  weighting.hpp


